=========================================================================
CHANGE LOG
=========================================================================

2012-11-12 Thomas Holder <thomas.holder@schrodinger.com>

	* Fixed #3539436: right justified resn in PDB

	* Fixed #3506103: alignment objects from "super" do not contain N atoms

	* Fixed #3496006: END before ENDMDL bug reintroduced

2012-08-15 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* Fixed longstanding annoyance: 'as rep, vis' now works

2012-08-14 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* Added autocomplete for 'group' command.

2012-08-14 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* Adding autocomplete for 'dss'.

2012-08-14 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* Fixed bug where FASTA strings aren't returned for multiple objects.

2012-06-06 Jason Vertrees <Jason.Vertrees@schrodinger.com>
	* Fixing up CEAlign (thanks to Thomas Holder)

	* FIXED: fails to align chains of length < 2*window+1
    
	* FIXED: if chain length is a multiple of window, only (length-window) residues get aligned

	* FIXED: only evaluates every 2nd path of the best 20 (increments k twice in the loop)

	* FIXED: if no alignment is found, the return value is NULL which raises a SystemError instead of a graceful error message.

	* FIXED: finally, it's not possible to obtain the alignment as an object (like with align ..., object=aln)

	* FIXED: fixed auto complete names on for cealign

2012-05-30 Blaine Bell <Blaine.Bell@schrodinger.com>

	* Fixing the exception handling of get_names_of_type

2012-05-30 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* Fixing get_unused_names

	* Fixing locking on get_names_of_type

2012-04-06 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* Adding checks for Quadro cards to enable cylinder shader workaround.

2012-04-06 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* Improved PyMOL Plugin System; Thomas Holder's PyMOL OSFP project
